version 0.1.1.4
 - bugfix in eliminate: faulty update of H matrix led to crashes in some cases.

version 0.1.1.3
 - bugfix in ranges. Crashed on some cases where matrices w/zero rows were created.
 - native routines now registered as requested by CRAN

version 0.1.1.1
 - new function 'is_totally_unimodular'
 - new function 'ranges' computes variable ranges implied by a system of (in)equations
 - eliminate gains argument 'eps' to control numerical accuracy
 - deprecated sparseConstraints in favor of the more consistent name sparse_constraints
 - bugfix: pinv crashed on matrices with a single s.v. 
 - bugfix: eliminate would sometimes report the wrong number of (in)equalities
 - bugfix: eliminate sometimes crashed because of a mismatch in colnames of history matrix

version 0.1.0
 - Initial release